--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.18.8",
     "browserify": "^14.3.0",
+    "classnames": "^2.2.5",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
